--- a/src/event_form/steps/event-form-step5.html
+++ b/src/event_form/steps/event-form-step5.html
@@ -103,7 +103,7 @@
               <section class="state complete">
                 <span>
                   <span ng-bind="eventFormData.organizer.name"></span>
-                  <a class="close" ng-click="deleteOrganizer()">
+                  <a class="close" ng-click="deleteOrganizerHandler()">
                     <span aria-hidden="true"> &times;</span>
                   </a>
                 </span>
