--- a/src/event_form/steps/event-form-step4.html
+++ b/src/event_form/steps/event-form-step4.html
@@ -81,7 +81,7 @@
     </div>
 
     <h3 ng-show="duplicatesSearched && resultViewer.totalItems > 0">
-      <span translate-once="eventForm.step4.sure" translate-once-value="{ name: '{{eventFormData.name.nl}}' }"></span>
+      <span translate-once="eventForm.step4.sure" translate-values="{ name: '{{eventFormData.name.nl}}' }"></span>
     </h3>
     <ul class="list-inline" ng-show="duplicatesSearched && resultViewer.totalItems > 0">
       <li>
