--- a/src/event_form/steps/event-form-step1.html
+++ b/src/event_form/steps/event-form-step1.html
@@ -38,7 +38,7 @@
                     ng-click="setEventType(placeType, false)"></button>
           </li>
           <li ng-hide="showAllPlaces">
-            <a href="" ng-click="togglePlaces()" translate-once="eventForm.step1.show_everythibng"></a>
+            <a href="" ng-click="togglePlaces()" translate-once="eventForm.step1.show_everything"></a>
           </li>
         </ul>
       </div>
