--- a/src/dashboard/dashboard.html
+++ b/src/dashboard/dashboard.html
@@ -15,8 +15,8 @@
   <div class="row udb-dashboard">
     <div class="col-xs-12">
 
-      <div class="alert alert-info" ng-if="!dash.toggleAddOffer && dash.addOfferReplaceMessage">
-        <span ng-bind-html="::dash.addOfferReplaceMessage"></span>
+      <div class="alert alert-info" ng-if="!dash.toggleAddOffer && dash.addOfferExpirationMessage">
+        <span ng-bind-html="::dash.addOfferExpirationMessage"></span>
       </div>
 
       <div class="panel panel-default no-new no-data" ng-hide="dash.pagedItemViewer.events.length">
