HER-115 rename disablePriceInfo

--- a/src/event_form/steps/event-form-step5.html
+++ b/src/event_form/steps/event-form-step5.html
@@ -148,7 +148,7 @@
           </div>
         </div>
 
-        <price-info price="price" ng-if="!hidePriceInfo" event-id="eventFormData.id" organizer="eventFormData.organizer"></price-info>
+        <price-info price="price" ng-if="!disablePriceInfo" event-id="eventFormData.id" organizer="eventFormData.organizer"></price-info>
         <uitpas-info organizer="eventFormData.organizer" price="eventFormData.priceInfo"></uitpas-info>
 
         <div class="row extra-contact">
