--- a/src/event_form/steps/event-form-step5.html
+++ b/src/event_form/steps/event-form-step5.html
@@ -17,7 +17,7 @@
               <em class="extra-task-label" translate-once="eventForm.step5.title"></em>
             </div>
             <div class="col-sm-8">
-              <p id="extra-titel-motivator" ng-bind="eventFormData.name.nl"></p>
+              <p id="extra-titel-motivator" ng-bind="eventFormData.name"></p>
             </div>
           </div>
         </div>
