--- a/src/event-detail/ui/event-detail.html
+++ b/src/event-detail/ui/event-detail.html
@@ -19,7 +19,7 @@
   <h1 class="title" ng-bind="::event.name"></h1>
   <div class="row">
     <div class="col-sm-3 col-sm-push-9">
-      <div class="list-group" ng-if="::permissions || ::mayAlwaysDelete">
+      <div class="list-group" ng-if="::permissions">
         <button ng-if="::permissions.editing"
                 class="list-group-item"
                 type="button"
