III-2615 always use on blur event for changing the title

--- a/src/event_form/steps/event-form-step4.html
+++ b/src/event_form/steps/event-form-step4.html
@@ -46,8 +46,7 @@
 
     <p ng-show="eventFormData.id === ''">
       <a class="btn btn-primary titel-doorgaan"
-          ng-click="validateEvent(true);"
-          ng-class="{'disabled': eventFormData.name === ''}">
+          ng-click="validateEvent(true);">
         <span translate-once="eventForm.step4.continue"></span> <i class="fa fa-circle-o-notch fa-spin" ng-show="saving"></i>
       </a>
     </p>
