--- a/src/event-detail/ui/event-detail.html
+++ b/src/event-detail/ui/event-detail.html
@@ -69,6 +69,7 @@
                   <span class="row-label" translate-once="preview.labels"></span>
                 </td>
                 <td>
+                  <p class="small text-muted">Met een label voeg je korte, specifieke trefwoorden toe.</p>
                   <p>
                     <udb-label-select labels="::event.labels"
                                     label-added="labelAdded(label)"
