--- a/src/event_form/steps/event-form-step5.html
+++ b/src/event_form/steps/event-form-step5.html
@@ -48,7 +48,8 @@
                             ng-model="description"
                             rows="6"
                             udb-auto-scroll
-                            focus-if="descriptionCssClass == 'state-filling'"></textarea>
+                            focus-if="descriptionCssClass == 'state-filling'"
+                            ng-paste='handlePaste($event.originalEvent.clipboardData.getData('text/plain'))'></textarea>
 
                   <p class="tip description-info" ng-if="descriptionInfoVisible && countCharacters() < 200">
                     <span translate-once="eventForm.step5.required_200"></span>
