--- a/src/event-detail/ui/event-detail.html
+++ b/src/event-detail/ui/event-detail.html
@@ -23,7 +23,11 @@
         <button ng-if="::permissions.editing"
                 class="list-group-item"
                 type="button"
-                ng-click="openEditPage()"><i class="fa fa-pencil" aria-hidden="true"></i>  <span translate-once="preview.edit"></span></button>
+                ng-click="openEditPage()"><i class="fa fa-pencil" aria-hidden="true"></i>  <span translate-once="preview.edit"></span> <span class="badge" ng-if="event.mainLanguage !== language" ng-bind="::event.mainLanguage"></span></button>
+        <button ng-if="::permissions.editing"
+                class="list-group-item"
+                type="button"
+                ng-click="openTranslatePage()"><i class="fa fa-globe" aria-hidden="true"></i>  <span translate-once="preview.translate"></span></button>
         <button ng-if="::permissions.duplication"
                 class="list-group-item"
                 type="button"
