--- a/src/place-detail/ui/place-detail.html
+++ b/src/place-detail/ui/place-detail.html
@@ -24,7 +24,11 @@
         <button ng-if="::permissions.editing"
                 class="list-group-item"
                 type="button"
-                ng-click="openEditPage()"><i class="fa fa-pencil" aria-hidden="true"></i>  <span translate-once="preview.edit"></span></button>
+                ng-click="openEditPage()"><i class="fa fa-pencil" aria-hidden="true"></i>  <span translate-once="preview.edit"></span> <span ng-if="place.mainLanguage !== language" ng-bind="'(' + place.mainLanguage + ')'"></span></button>
+        <button ng-if="::permissions.editing"
+                class="list-group-item"
+                type="button"
+                ng-click="openTranslatePage()"><i class="fa fa-globe" aria-hidden="true"></i>  <span translate-once="preview.translate"></span></button>
         <button ng-if="::permissions.editing"
                 class="list-group-item"
                 href="#"
