--- a/src/place-detail/ui/place-detail.html
+++ b/src/place-detail/ui/place-detail.html
@@ -55,12 +55,12 @@
               <td>{{::place.type.label}}</td>
             </tr>
 
-            <tr ng-class="::{muted: place.description==undefined}">
+            <tr ng-class="{muted: !place.description}">
               <td><span class="row-label" translate-once="preview.description"></span></td>
-              <td ng-if="::(place.description!==undefined)">
-                <div ng-bind-html="::place.description" class="event-detail-description"></div>
+              <td ng-if="place.description">
+                <div ng-bind-html="place.description" class="event-detail-description"></div>
               </td>
-              <td ng-if="::(place.description==undefined)" translate-once="preview.no_description"></td>
+              <td ng-if="!place.description" translate-once="preview.no_description"></td>
             </tr>
             <tr>
               <td><span class="row-label" translate-once="preview.where"></span></td>
