III-2633 fix typo

--- a/src/place-detail/ui/place-detail.html
+++ b/src/place-detail/ui/place-detail.html
@@ -96,7 +96,7 @@
               <td><span class="row-label" translate-once="preview.age_label"></span></td>
               <td>
                 <span ng-if="::place.typicalAgeRange">{{::place.typicalAgeRange}}</span>
-                <span ng-if="::(!place.typicalAgeRange)" translate-once="preview.all_agges"></span>
+                <span ng-if="::(!place.typicalAgeRange)" translate-once="preview.all_ages"></span>
               </td>
             </tr>
           </tbody>
