--- a/src/offer_translate/ui/offer-translate.html
+++ b/src/offer_translate/ui/offer-translate.html
@@ -18,32 +18,7 @@
   </div>
 
   <!-- Titel -->
-  <section class="translate-section">
-    <div class="row">
-      <div class="col-sm-3">
-        <p><strong translate-once="translate.title"></strong></p>
-      </div>
-      <div class="col-sm-9">
-        <div class="row">
-          <div class="col-sm-3">
-            <p class="orginal text-muted" translate-once="translate.original"></p>
-          </div>
-          <div class="col-sm-9">
-            <p class="orginal text-muted" ng-bind="originalName"></p>
-          </div>
-        </div>
-
-        <div class="row" ng-repeat="(code, language) in activeLanguages" ng-show="language.active && !language.main">
-          <div class="col-sm-3">
-            <p class="orginal text-muted">{{code}}</p>
-          </div>
-          <div class="col-sm-9">
-            <textarea ng-blur="saveTranslatedName(code)" class="form-control form-group" ng-model="translatedNames[code]"></textarea>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+  <offer-translate-title offer="cachedOffer" active-languages="activeLanguages"></offer-translate-title>
 
   <!-- Beschrijving -->
   <section class="translate-section" ng-show="originalDescription">
