III-2629 move translate images to separate component

--- a/src/offer_translate/ui/offer-translate.html
+++ b/src/offer_translate/ui/offer-translate.html
@@ -30,86 +30,7 @@
   <offer-translate-address offer="cachedOffer" active-languages="activeLanguages" ng-if="isPlace"></offer-translate-address>
 
   <!-- Image -->
-  <section class="translate-section" ng-show="cachedOffer.mediaObject.length > 0">
-    <div class="row">
-      <div class="col-sm-3">
-        <p><strong>Afbeelding(en)</strong></p>
-      </div>
-      <div class="col-sm-9">
-        <div class="row">
-          <div class="col-sm-3">
-            <p class="orginal text-muted">Origineel</p>
-          </div>
-          <div class="col-sm-9">
-            <div class="panel panel-default">
-              <div class="panel-body">
-                <div ng-repeat="image in imageFormData.mediaObjects | filter:{'@type': 'schema:ImageObject', 'inLanguage': mainLanguage} track by image.contentUrl">
-                  <div class="uploaded-image">
-
-
-                        <img ng-src="{{ image.thumbnailUrl }}?width=50&height=50" style="width: 50px;">
-
-
-
-                        <div ng-bind="image.description"></div>
-                        <div class="text-muted">&copy; <span ng-bind="image.copyrightHolder"><span translate-once="eventForm.step5.copyright"></span></span></div>
-
-                          <!-- Single button -->
-                          <div class="btn-group">
-                            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                              Dupliceer <span class="caret"></span>
-                            </button>
-                            <ul class="dropdown-menu">
-                              <li ng-repeat="(code, language) in activeLanguages"><a ng-click="translateImage(image, code)">{{code}}</a></li>
-                            </ul>
-                          </div>
-
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="row" ng-repeat="(code, language) in activeLanguages" ng-show="language.active && !language.main">
-          <div class="col-sm-3">
-            <p class="orginal text-muted">{{code}}</p>
-          </div>
-          <div class="col-sm-9">
-            <div class="panel panel-default">
-              <div class="panel-body">
-                <div ng-repeat="image in imageFormData.mediaObjects | filter:{'@type': 'schema:ImageObject', 'inLanguage': code} track by image.contentUrl">
-                  <div class="uploaded-image">
-                    <div class="media" ng-class="{'main-image': ($index === 0)}">
-                      <a class="media-left" href="#">
-                        <img ng-src="{{ image.thumbnailUrl }}?width=50&height=50" style="width: 50px;">
-                      </a>
-
-                      <div class="media-body">
-                        <div ng-bind="image.description"></div>
-                        <div class="text-muted">&copy; <span ng-bind="image.copyrightHolder"><span translate-once="eventForm.step5.copyright"></span></span></div>
-                      </div>
-
-                      <div class="media-actions">
-                          <a class="btn btn-xs btn-primary" ng-click="editImage(image)" translate-once="eventForm.step5.change"></a>
-                          <a class="btn btn-xs btn-danger" ng-click="removeImage(image)" translate-once="eventForm.step5.delete"></a>
-                      </div>
-
-                    </div>
-                  </div>
-                </div>
-                <a class="btn btn-default"
-                   href="#"
-                   translate-once="eventForm.step5.add_image"
-                   ng-click="openUploadImageModal(code)"></a>
-              </div>
-            </div>
-
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+  <offer-translate-images offer="cachedOffer" active-languages="activeLanguages"></offer-translate-images>
 
   <button class="btn btn-success" ng-click="goToDashboard()" translate-once="translate.ready"></button>
 
