--- a/src/event_form/steps/event-form-step1.html
+++ b/src/event_form/steps/event-form-step1.html
@@ -16,7 +16,7 @@
         <label class="event-type-choser-label event"><span translate-once="eventForm.step1.label_event"></span></label>
         <ul class="list-inline" id="step1-events">
           <li ng-repeat="eventType in ::eventTypeLabels | orderBy:'label'" ng-show="eventType.primary === true || showAllEventTypes">
-            <button ng-bind="::translateEventTypes(eventType.label)" class="btn btn-default"
+            <button ng-bind="::translateOfferTypes(eventType.label)" class="btn btn-default"
                     ng-click="setEventType(eventType, true)"></button>
           </li>
           <li ng-hide="showAllEventTypes">
@@ -34,7 +34,7 @@
         <label class="event-type-choser-label place"><span translate-once="eventForm.step1.location_label"></span></label>
         <ul class="list-inline" id="step1-places">
           <li ng-repeat="placeType in ::placeLabels | orderBy:'label'" ng-show="placeType.primary == true || showAllPlaces">
-            <button ng-bind="::translateEventTypes(placeType.label)" class="btn btn-default"
+            <button ng-bind="::translateOfferTypes(placeType.label)" class="btn btn-default"
                     ng-click="setEventType(placeType, false)"></button>
           </li>
           <li ng-hide="showAllPlaces">
@@ -46,7 +46,7 @@
 
     <div class="row">
       <p class="col-xs-12 col-md-12" ng-hide="activeEventType === ''">
-        <span class="btn-chosen" ng-bind="translateEventTypes(activeEventTypeLabel)"></span>
+        <span class="btn-chosen" ng-bind="activeEventTypeLabel"></span>
         <a class="btn btn-link btn-default"
            href="" ng-click="resetEventType()"
            translate-once="eventForm.step1.change"></a>
@@ -57,12 +57,12 @@
         <div ng-repeat="(key, values) in eventThemeLabels | groupBy: 'group'">
           <div class="row">
             <div class="col-xs-2" ng-show="key !== 'undefined'" >
-              <p class="text-muted" ng-bind="::translateEventThemesGroups(key)"></p>
+              <p class="text-muted" ng-bind="::translateOfferThemesGroups(key)"></p>
             </div>
             <div ng-class="key === 'undefined' ? 'col-xs-12' : 'col-xs-10'">
               <ul class="list-inline list-themes">
                 <li ng-repeat="eventTheme in values">
-                  <button ng-bind="::translateEventThemes(eventTheme.label)" class="btn btn-default"
+                  <button ng-bind="::translateOfferThemes(eventTheme.label)" class="btn btn-default"
                           ng-click="setTheme(eventTheme)"></button>
                 </li>
               </ul>
@@ -72,7 +72,7 @@
       </div>
 
       <p class="col-xs-12 col-md-12"  ng-hide="activeTheme === ''">
-        <span class="btn-chosen" ng-bind="translateEventThemes(activeThemeLabel)"></span>
+        <span class="btn-chosen" ng-bind="activeThemeLabel"></span>
         <a class="btn btn-link btn-default"
            href="" ng-click="resetTheme()"
            translate-once="eventForm.step1.change"></a>
