--- a/src/event_form/steps/event-form.html
+++ b/src/event_form/steps/event-form.html
@@ -1,6 +1,7 @@
 <div class="offer-form" ng-if="loaded">
   <div class="alert alert-warning" ng-show="language!== 'nl'">
     <p>Opgelet, je (be)werkt in een andere taal: {{language}}. Is dit niet de bedoeling, neem dan contact op met vragen@uitdatabank.be.</p>
+    <p>Attention, vous éditez dans une autre langue: {{language}}. Quand ceci n'est pas l'intention, s'il vous plaît contacter avec vragen@uitdatabank.be</p>
   </div>
 
   <udb-event-form-step1></udb-event-form-step1>
