III-2682 language key for bookingInfo url label

--- a/src/event_form/steps/event-form-step5.html
+++ b/src/event_form/steps/event-form-step5.html
@@ -214,7 +214,7 @@
                             <div class="reservatie-info-stap2">
                               <div class="weergave">
                                 <p><strong translate-once="eventForm.step5.booking_exposure"></strong></p>
-                                <select ng-model="bookingModel.urlLabel"
+                                <select ng-model="bookingModel.urlLabel[mainLanguage]"
                                         ng-change="saveWebsitePreview()">
                                   <option value="Koop tickets" translate-once="eventForm.step5.buy_tickets"></option>
                                   <option value="Reserveer plaatsen" translate-once="eventForm.step5.reserve_places"></option>
