III-2682 work with translated urlLabels on the frontend

--- a/src/event_form/steps/event-form-step5.html
+++ b/src/event_form/steps/event-form-step5.html
@@ -215,11 +215,12 @@
                               <div class="weergave">
                                 <p><strong translate-once="eventForm.step5.booking_exposure"></strong></p>
                                 <select ng-model="bookingModel.urlLabel[mainLanguage]"
-                                        ng-change="saveWebsitePreview()">
-                                  <option value="Koop tickets" translate-once="eventForm.step5.buy_tickets"></option>
+                                        ng-change="saveWebsitePreview()"
+                                        ng-options="translateBookingInfoUrlLabels(option) as translateBookingInfoUrlLabels(option) for option in bookingOptions">
+                                  <!--<option value="translate" translate-once="eventForm.step5.buy_tickets"></option>
                                   <option value="Reserveer plaatsen" translate-once="eventForm.step5.reserve_places"></option>
                                   <option value="Controleer beschikbaarheid" translate-once="eventForm.step5.check_availability"></option>
-                                  <option value="Schrijf je in" translate-once="eventForm.step5.subscribe"></option>
+                                  <option value="Schrijf je in" translate-once="eventForm.step5.subscribe"></option>-->
                                 </select>
                               </div>
                             </div>
